test/nexj/invalidbase/messages/CrossFormat_Object.message
<Message format="Object">
   <ObjectMapping class="Contact"/>
   <Parts>
      <Value name="firstName" type="string"/>
   </Parts>
</Message>
